--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-helm.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-helm.yaml
@@ -17,7 +17,7 @@ thirdparty-auth-svc-db:
         - mojaloop
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -66,7 +66,7 @@ mysql-consent-oracle-db:
         - mojaloop
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -115,7 +115,7 @@ mcm-db:
         - mcm
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -164,7 +164,7 @@ account-lookup-db:
         - mojaloop
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -225,7 +225,7 @@ central-ledger-db:
       general_log: 0
       slow_query_log: 0
       root_password: ""
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -450,7 +450,7 @@ keycloak-db:
         - keycloak
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -500,7 +500,7 @@ keto-db:
       generate_secret_special_chars: _
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
@@ -550,7 +550,7 @@ kratos-db:
       generate_secret_special_chars: _
     mysql_data:
       is_legacy: false
-      default_authentication_plugin: mysql_native_password
+      default_authentication_plugin: caching_sha2_password
       basedir: "/opt/bitnami/mysql"
       plugin_dir: "/opt/bitnami/mysql/lib/plugin"
       socket: "/opt/bitnami/mysql/tmp/mysql.sock"
