--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -1,10 +1,10 @@
 thirdparty-auth-svc-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: thirdparty-db
     override_service_name: mysql-thirdparty-auth-svc-db
     resource_operator_crd_version: 1.15.0
@@ -59,10 +59,10 @@ thirdparty-auth-svc-db:
 mysql-consent-oracle-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: thirdparty-db
     override_service_name:
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -119,10 +119,10 @@ mysql-consent-oracle-db:
 mcm-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: mcm-db
     override_service_name: mcm-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -179,10 +179,10 @@ mcm-db:
 account-lookup-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: mojaloop-db
     override_service_name: account-lookup-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -247,10 +247,10 @@ account-lookup-db:
 central-ledger-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: mojaloop-db
     override_service_name: central-ledger-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -525,10 +525,10 @@ ttk-mongodb:
 keycloak-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: keycloak-db
     override_service_name: keycloak-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -585,10 +585,10 @@ keycloak-db:
 keto-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: keto-db
     override_service_name: keto-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -646,10 +646,10 @@ keto-db:
 kratos-db:
   local_operator_config:
     cr_version: 1.14.0
-    percona_xtradb_mysql_version: 8.0.35-27.1
+    percona_xtradb_mysql_version: 8.0.42-33
     percona_xtradb_haproxy_version: 1.14.0-haproxy
     percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35
+    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
     resource_namespace: kratos-db
     override_service_name: kratos-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
