--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -2,9 +2,9 @@ thirdparty-auth-svc-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: thirdparty-db
     override_service_name: mysql-thirdparty-auth-svc-db
     resource_operator_crd_version: 1.15.0
@@ -60,9 +60,9 @@ mysql-consent-oracle-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: thirdparty-db
     override_service_name:
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -120,9 +120,9 @@ mcm-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: mcm-db
     override_service_name: mcm-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -180,9 +180,9 @@ account-lookup-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: mojaloop-db
     override_service_name: account-lookup-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -248,9 +248,9 @@ central-ledger-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: mojaloop-db
     override_service_name: central-ledger-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -526,9 +526,9 @@ keycloak-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: keycloak-db
     override_service_name: keycloak-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -586,9 +586,9 @@ keto-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: keto-db
     override_service_name: keto-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
@@ -647,9 +647,9 @@ kratos-db:
   local_operator_config:
     cr_version: 1.14.0
     percona_xtradb_mysql_version: 8.0.42-33
-    percona_xtradb_haproxy_version: 1.14.0-haproxy
-    percona_xtradb_logcoll_version: 1.14.0-logcollector
-    percona_xtradb_backup_version: 1.14.0-pxc8.0-backup-pxb8.0.35-33
+    percona_xtradb_haproxy_version: 1.14.1-haproxy
+    percona_xtradb_logcoll_version: 1.14.1-logcollector
+    percona_xtradb_backup_version: 1.17.0-pxc8.0-backup-pxb8.0.35
     resource_namespace: kratos-db
     override_service_name: kratos-db-haproxy
     resource_helm_repo: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
